<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/main_activity_side_padding"
    android:paddingTop="@dimen/main_activity_top_padding"
    android:paddingBottom="@dimen/main_activity_bottom_padding">

    <TextView
        style ="@style/TextHeaderStyle"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        style="@style/MenuButtonStyle"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/library_button"
        style ="@style/MenuButtonStyle"
        android:layout_marginTop="@dimen/menu_button_marginTop"
        android:text="@string/library"
        app:icon="@drawable/ic_library" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button"
        style ="@style/MenuButtonStyle"
        android:layout_marginTop="@dimen/menu_button_marginTop"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />
</LinearLayout>
