<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.ui.settings.activity.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle">

        <TextView
            style="@style/TextHeaderStyle"
            android:text="@string/settings" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/DarkModeSwitcher"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="24dp"
        android:paddingVertical="@dimen/size_21"
        android:text="@string/dark_theme"
        android:textSize="@dimen/text_size_16" />

    <LinearLayout style="@style/SettingsElementStyle">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/shareAppIcon"
            style="@style/SettingsIconStyle"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout style="@style/SettingsElementStyle">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/write_to_support" />

        <ImageView
            android:id="@+id/supportIcon"
            style="@style/SettingsIconStyle"
            android:src="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout style="@style/SettingsElementStyle">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/agreementIcon"
            style="@style/SettingsIconStyle"
            android:src="@drawable/ic_arrow_forward" />

    </LinearLayout>

</LinearLayout>