<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_margin="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/toolbar_header_margin"
            android:text="@string/settings"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/header_text_size" />

    </androidx.appcompat.widget.Toolbar>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/settings_margin_start"
        android:layout_marginTop="40dp"
        android:paddingVertical="@dimen/settings_element_padding_vertical"
        android:text="@string/dark_theme"
        android:textSize="@dimen/text_small"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_for_setting"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/settings_element_padding_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/settings_margin_start"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/text_small" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/settings_margin_end"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_for_setting"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/settings_element_padding_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/settings_margin_start"
            android:layout_weight="1"
            android:text="@string/write_to_support"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/text_small" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/settings_margin_end"
            android:src="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_for_setting"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/settings_element_padding_vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/settings_margin_start"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/text_small" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/settings_margin_end"
            android:src="@drawable/ic_arrow_forward" />

    </LinearLayout>

</LinearLayout>