<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.ui.search.fragment.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/searchToolbar"
        style="@style/ToolBarStyle"
        >

        <TextView
            style="@style/TextHeaderStyle"
            android:text="@string/search" />
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/edit_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16"
        android:layout_marginVertical="@dimen/size_12"
        android:background="@drawable/shape_on_search_screen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/size_12">

            <ImageView
                android:id="@+id/search_icon"
                style="@style/SearchIconStyle"
                android:contentDescription="@string/search"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/ic_search_16"/>

            <EditText
                android:id="@+id/searchEditText"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_8"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/dark"
                android:textCursorDrawable="@drawable/blue_cursor" />

        </LinearLayout>

        <ImageView
            android:id="@+id/clearButton"
            style="@style/ClearTextIconStyle"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/size_12"
            android:visibility="gone"
            android:src="@drawable/ic_clear_text"/>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <TextView
        android:id="@+id/searchHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/histore_header"
        android:textAlignment="center"
        android:textFontWeight="500"
        android:textSize="@dimen/text_size_19" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:visibility="gone"
        tools:listitem="@layout/track_view_card" />

    <Button
        android:id="@+id/clearHistoryButton"
        style="@style/SearchingActivityButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_weight="0"
        android:text="@string/clear_history"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_14" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/trackNotFoundVidget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/SearchingActivityNotFoundMode"
                android:src="@drawable/track_not_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_110" />

            <TextView
                style="@style/PlaceHolderText"
                android:text="@string/not_found" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noInternetVidget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                style="@style/SearchingActivityNetworkProbleMode"
                android:src="@drawable/no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_110" />

            <TextView
                style="@style/PlaceHolderText"
                android:layout_marginHorizontal="@dimen/size_24"
                android:text="@string/no_internet"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_19" />

            <Button
                android:id="@+id/update_button"
                style="@style/SearchingActivityButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>